update after railML2B updates